examples/bad/syntax/missing-return-type.oo
// bool checkCondition(<(int):bool> cond, int x) {
bool checkCondition(<(int)> cond, int x) {
    return cond(x);
}
